[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "3"

[profile.release]
opt-level = "z"     # Optimize for size ('z' is more aggressive than 's')
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize optimization potential
panic = "abort"     # Remove unwinding code
strip = true        # Automatically strip symbols
